# board_game_graph

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
data/: graph0_3x3_d2.json  ttt_0_3x3.json
data/graphs/: ttt_graph0_3x3.dot  ttt_graph0_3x3.dot.dot  ttt_graph0_3x3.neato.dot  ttt_graph0_3x3_d-1.dot.dot  ttt_graph0_3x3_d-1.json  ttt_graph0_3x3_d2_no-win.dot  ttt_graph0_3x3_d3.fdp.dot  ttt_graph166_3x3_d-1.dot.dot  ttt_graph166_3x3_d2_sub1624.neato.dot  ttt_graph166_3x3_d3.neato.dot  ttt_graph8_3x3_d-1.sfdp.dot  ttt_graph8_3x3_d3.neato.dot  ttt_manual0_3x3_d-1.json  ttt_manual0_3x3_d-1.neato.dot  ttt_manual0_3x3_d1.json  ttt_manual0_3x3_d1.neato.dot  ttt_manual0_3x3_d3.json  ttt_manual0_3x3_d3.neato.dot  ttt_manual0_3x3_d5.json  ttt_manual123_3x3_d3.json  ttt_manual166_3x3_d3.json  ttt_manual166_3x3_d3.neato.dot  ttt_manual1_3x3_d-1.json  ttt_manual4_3x3_d3.json  ttt_manual4_3x3_d3.neato.dot  ttt_manual81_3x3_d-1.json  ttt_manual8_3x3_d3.json  ttt_manual8_3x3_d3.neato.dot
data/wins/: ttt_wins_p2_3x3.json
dot/: graph1.dot
src/board_game_graph.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pyproject_detroix23.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tic_tac_toe_detroix23/: __init__.py  __main__.py  cli.py  conditions.py  configurations.py  definitions.py  exports.py  graphing.py  graphs.py  optimization.py  plays.py  tests.py  ui.py
src/utilities/: __init__.py  debug.py
