[project]
name = "board_game_graph"
version = "0.0.2"
description = "Represent games the most efficiently to draw 'play graphs'."
authors = [
    { name="Detroix23", email="detroix23@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
dependencies = []

license = "CC-BY-4.0"
license-files = ["LICENSE.md"]

[project.urls]
Repository = "https://github.com/Detroix23/board_game_graph"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.mypy]
strict = true
